# aoms

./: .claudeignore  .gitignore  CLAUDE.md  Makefile  READMD.md  README.md  build-images.sh  collection_reset.sh  deploy-guide.md  docker-compose.yml  install-agents.sh  verify-deploy.sh
agent/: CLAUDE.md  Cargo.toml  agent-testcase.md  build.rs  build.sh  config.example.toml  config.sample.toml
agent/src/: config.rs  main.rs
agent/src/log_monitor/: matcher.rs  mod.rs  tailer.rs  template.rs
agent/src/metrics/: cpu.rs  disk.rs  memory.rs  mod.rs  network.rs  process.rs
agent/src/preprocessor/: correlate.rs  mod.rs  summarize.rs
agent/src/web_monitor/: access_log.rs  mod.rs  url_normalizer.rs
agent/src/web_monitor/parser/: clf.rs  combined.rs  mod.rs  nginx_json.rs
agent/src/writer/: compress.rs  encode.rs  mod.rs  sender.rs  wal.rs
agent/test/: Dockerfile  Dockerfile.target  config-jeuspls.toml  config-jeussic.toml  config.toml  docker-compose.multiuser.yml  docker-compose.test.yml  entrypoint-target.sh  generate-jeus-logs.sh  generate-logs.sh  otel-env.sh.sample
agent/test/sample-app/: SampleApp.java
docs/: agent-auto-process-workflow.md  agent-generator.md  architecture-design.md  data-flow.md  improve_idea.md  next-process-work.md  presentation_v1.0.md  presentation_v1.1.md  requirements-specification.md  workflow.md
main-server/: .claudeignore  .env.example  .env.local  .env.local.example  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.ssh-test.yml  docker-compose.yml
scripts/: eval_rag.py  export-ollama-model.sh  (+1 more)
(+479 files in other folders)
