[package]
name = "synapse-agent"
version = "0.1.0"
edition = "2021"
description = "Ultra-lightweight monitoring agent for Synapse"

[[bin]]
name = "agent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
snap = "1.1"
aho-corasick = "1.1"
regex = "1.10"
notify = "6.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
glob = "0.3"
anyhow = "1"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.17"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
